# rchts

./: BAM.README.md  Cargo.toml  LICENSE  README.md
src/: bam_reader.rs  bam_writer.rs  header.rs  index.rs  lib.rs  pileup.rs  sam.rs
src/bgzip/: mod.rs  read.rs  write.rs
src/record/: cigar.rs  mod.rs  sequence.rs  tags.rs
tests/: integration_test.rs
