[package]
name = "bam"
version = "0.1.4"
authors = ["Timofey Prodanov <timofey.prodanov@gmail.com>"]
edition = "2018"
description = "Crate that allows to read and write BAM, SAM and BGZIP files, written completely in Rust."
repository = "https://gitlab.com/tprodanov/bam"
readme = "README.md"
license = "MIT"
keywords = ["bam", "sam", "htslib", "bgzip", "pileup"]
documentation = "https://docs.rs/bam"
exclude = [".cargo_vcs_info.json", ".gitignore"]

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[dependencies]
byteorder = "1.3"
crc32fast = "1.2"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

[dev-dependencies]
rand = "0.7"
glob = "0.3"
